fix edit mode inputs on iPhone

--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -577,9 +577,9 @@ $iconWidth: 30px;
    margin-bottom: 3px;
 }
 
-.page-item-input {
-   height: 32px;
-}
+// .page-item-input {
+//    height: 32px;
+// }
 
 .compartment-title,
 .compartment-input {
@@ -590,13 +590,13 @@ $iconWidth: 30px;
    height: 21px; // to make the height match what the input version ends up being
 }
 
-.compartment-input {
-   height: 28px;
-}
+// .compartment-input {
+//    height: 28px;
+// }
 
-.card-item-input {
-   height: 24px;
-}
+// .card-item-input {
+//    height: 24px;
+// }
 
 input {
    // background-color: black;
